@@ -1,2 +1,12 @@
 # TankGame
 A level-based and achievement-based tank shooting game coded using swing and javafx.
+
+# Setup
+The only outside application needed is javafx. To install it, simply download the package
+from openjfx.io. 
+
+# Running
+To run the game, run the command 
+```
+java --module-path {path-to-javafx} --add-modules=javafx.controls, javafx.swing, javafx.media TankGame
+```
